// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> should not render without items 1`] = `
<Section
  title="Headline"
/>
`;

exports[`<Section /> should render with a headline and items 1`] = `
<Section
  title="Headline"
>
  <Headline
    className="tss-4b37q4-headline"
    style={null}
    tag="h2"
    text="Headline"
  >
    <h2
      className="headline theme__headline tss-10zp3hj-h2-headline"
      data-test-id="Headline"
      style={null}
    >
      <Text
        string="Headline"
      >
        Headline
      </Text>
    </h2>
  </Headline>
  <div
    className="tss-1sqpupb-list"
    data-test-id="more-section-list"
  >
    <MoreMenuItem
      className={null}
      href="/link/one"
      label="Item One"
      onClick={null}
      testId={null}
    >
      <Link
        className="tss-1lse86s-root"
        href="/link/one"
        role="button"
      >
        <Text
          string="Item One"
        >
          Item One
        </Text>
      </Link>
    </MoreMenuItem>
    <MoreMenuItem
      className={null}
      href="/link/two"
      label="Item Two"
      onClick={null}
      testId={null}
    >
      <Link
        className="tss-1lse86s-root"
        href="/link/two"
        role="button"
      >
        <Text
          string="Item Two"
        >
          Item Two
        </Text>
      </Link>
    </MoreMenuItem>
  </div>
</Section>
`;

exports[`<Section /> should render without a headline but items 1`] = `
<Section
  title=""
>
  <Headline
    className="tss-4b37q4-headline"
    style={null}
    tag="h2"
    text=""
  />
  <div
    className="tss-1sqpupb-list"
    data-test-id="more-section-list"
  >
    <MoreMenuItem
      className={null}
      href="/link/one"
      label="Item One"
      onClick={null}
      testId={null}
    >
      <Link
        className="tss-1lse86s-root"
        href="/link/one"
        role="button"
      >
        <Text
          string="Item One"
        >
          Item One
        </Text>
      </Link>
    </MoreMenuItem>
    <MoreMenuItem
      className={null}
      href="/link/two"
      label="Item Two"
      onClick={null}
      testId={null}
    >
      <Link
        className="tss-1lse86s-root"
        href="/link/two"
        role="button"
      >
        <Text
          string="Item Two"
        >
          Item Two
        </Text>
      </Link>
    </MoreMenuItem>
  </div>
</Section>
`;
